--- a/KriddieFolder/LongTermData_Stn02_2022-11-08.Rmd
+++ b/KriddieFolder/LongTermData_Stn02_2022-11-08.Rmd
@@ -24,6 +24,8 @@ library(dplyr)
 library(reshape2)
 library(purrr)
 library(sjmisc)
+library(ggpubr)
+library(gridExtra)
 ```
 
 ##read in wl02
@@ -485,9 +487,7 @@ Q <- ggplot(data = Stn02, aes(DateTime, Q_m3s)) +
   labs(#title = "Q  stations",
        y = "Q", x = "") 
 
-library(ggpubr)
-library(gridExtra)
-library(dplyr)
+
 
 grid.arrange(co2, Q, ncol=1)
 
@@ -505,7 +505,7 @@ all.figs <- ggarrange(NULL,co2, NULL,Q, ncol = 1,
 #dissolved o2
 
 
-```{r loop}
+```{r loop DO data, echo = FALSE}
 
 setwd(here::here("DO"))
 all_files=list.files(pattern=".csv") #pulls out the csv files from CO2 folder
@@ -513,7 +513,6 @@ sites_rp = sub('_[^_]+$', '', all_files)
 site_names=unique(sites_rp) #creates list of site names for following loop
 
 site_names = "DO_02"
-#site_names = site_names[c(2,3,5,6)]
 
 #rm old files, if they exist
 rm(DOData)
@@ -570,13 +569,13 @@ for (site in site_names){
   rm(DOData) #removes DOdata so that multiple sites aren't appended together
 }
 
-DO_03$Station <- "Stn02"
+DO_02$Station <- "Stn02"
 
 ```
 
 #check do data
 
-```{r check CO2 data plot, echo=FALSE}
+```{r check DO data plot, echo=FALSE}
 
 
 ##check data
@@ -587,7 +586,7 @@ DO_02 <- DO_02%>%filter(DO_mgL > -100)
 ```
 
 
-```{r check Lux data plot, echo=FALSE}
+```{r loop Lux data, echo=FALSE}
 ##set folder for site ##
 
 setwd(here::here("Lux"))
@@ -643,19 +642,39 @@ for (site in site_names){
 LUXabajo_02_Lux_data$Station <- "Stn02"
 LUXarriba_02_Lux_data$Station <- "Stn02"
 
+
 ```
 
 #plot lux
 
-```{r check CO2 data plot, echo=FALSE}
+```{r check LUX data plot, echo=FALSE}
 
 
 ##check data
 plot_ly(LUXabajo_02_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
 
 
-plot_ly(LUXarriba_02_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
+plot_ly(LUXarriba_02_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines')
 
-#clean 
-#DO_06 <- DO_06%>%filter(DO_mgL > -100)
+#bind lux data
+colnames(LUXabajo_02_Lux_data) <- c("DateTime","LUXabajoTemp_c","LUXabajo","Station")
+colnames(LUXarriba_02_Lux_data) <- c("DateTime","LUXarribaTemp_c","LUXarriba","Station")
+
+Lux_02 <- full_join(LUXarriba_02_Lux_data, LUXabajo_02_Lux_data, by=c("DateTime","Station"))
+
+
+```
+
+#now we merge everything together!!
+
+```{r merge dataframe, echo=FALSE}
+Stn02_df <- full_join(WL_02, CO2_02, by=c("DateTime","Station"))
+Stn02_df <- full_join(Stn02_df, DO_02, by=c("DateTime","Station"))
+Stn02_df <- full_join(Stn02_df, Lux_02, by=c("DateTime","Station"))
+
+```
+
+```{r write out data, echo=FALSE}
+write.csv(Stn02_df,here::here("LongTermData/Stn02_df_2022-10-16.csv"))
+
 ```
