--- a/KriddieFolder/Geomorphology_Script/COLM_Geomorphology_2022-06-04.Rmd
+++ b/KriddieFolder/Geomorphology_Script/COLM_Geomorphology_2022-06-04.Rmd
@@ -81,15 +81,16 @@ Geomorph <- rbind(Geomorph_July9,Geomorph)
 
 ```{r 3d plot no synop, echo=FALSE}
 
-
-fig <- plot_ly(Geomorph, x = ~lat, y = ~lon, z = ~ele, size = 1
+Geomorph_plot <- Geomorph
+colnames(Geomorph_plot) <- c("latitude","longitude","elevation","Datetime")
+fig <- plot_ly(Geomorph_plot, x = ~latitude, y = ~longitude, z = ~elevation, size = 1,color=~elevation
 )
 fig <- fig %>% add_markers()
 #fig <- fig %>% add_trace(x = ~lat, y = ~lon, z = ~ele, #color = ~EOS_no#, colors = c('Blue','Yellow'),
 #                         mode = 'markers')
-fig <- fig %>% layout(scene = list(xaxis = list(title = 'lat'),
-                                   yaxis = list(title = 'lon'),
-                                   zaxis = list(title = 'elevation')))
+fig <- fig %>% layout(scene = list(xaxis = list(title = 'latitude'),
+                                   yaxis = list(title = 'longitude'),
+                                   zaxis = list(title = 'elevation')))%>% layout(legend=list(title=list(text='<b> Elevation </b>')))
 
 fig
 
@@ -126,7 +127,9 @@ latlims <- range(Geomorph_sub$lat)
 lat.grid <- seq(from=latlims[1],to=latlims[2], by=.00001)
 pred <-predict(model,newdata=list(lat=lat.grid),se=T)
 
-plot(Geomorph_sub$lat,Geomorph_sub$lon,main="regressionSplinePLot")
+plot(Geomorph_sub$lat,Geomorph_sub$lon,main="Fitted Polynomiel Spline",
+        xlab="latitude",
+        ylab="longitude")
 lines(lat.grid,pred$fit,col='red',lwd=3)
 
 fig<-plot_ly(data = Geomorph_sub, x = ~lat, y = ~lon)
@@ -255,7 +258,6 @@ ok sweet that looks really good
 We also need to snap the synoptic df (for later)
 ```{r snap synop pts}
 
-#df_prediction <- rbind(df1,df2,df3,df4)
 
 #df_prediction <- df_prediction[,c("lon","lat","num")] 
 x <- SpatialPoints(synop[,c(1:2)])
@@ -265,7 +267,16 @@ points(y, col = "green")
 snap = apply(spDists(x, y), 1, which.min)
 points(y[snap,], pch = 3)
 
+##format for a nice plot
+x <- SpatialPoints(synop[,c(1:2)])
+y <- SpatialPoints(df_prediction[,c(1:2)]) 
+plot(y, col = "lightblue",pch = 19)
+points(x, col = "red",pch = 4)
+snap = apply(spDists(x, y), 1, which.min)
+points(y[snap,], pch = 3)
+box(lty = 'solid', col ='black')
 
+#continue
 snap_df <- y[snap,]
 coords_df <- snap_df@coords
 pred <- as.data.frame(coords_df)
@@ -318,6 +329,19 @@ df_prediction %>%
   ggplot(aes(dist, ele)) +
   geom_point(size = 3, alpha = .5, color = "grey") +
   geom_line(aes(dist, smooth), color="red")
+
+#pretty it up for supp data
+p <- df_prediction %>% 
+  drop_na(ele) %>%
+  mutate(smooth = fit$fitted) %>%
+  ggplot(aes(dist, ele)) +
+  geom_point(size = 3, alpha = .5, color = "grey") +
+  geom_line(aes(dist, smooth), color="red", size=3) +
+  theme_bw()
+
+p+theme(axis.text=element_text(size=14),
+        axis.title=element_text(size=16)) +
+  ylab("Elevation") + xlab("Distance")
 
 #fit <- loess(ele ~ dist, degree=2, span = 0.30, data=df_prediction)
 distlims <- range(df_prediction$dist)
@@ -441,7 +465,12 @@ take the loess spline and make a data frame that interpolates these data points
 ```{r interpolate loess, echo=FALSE}
 
 flux <- ggplot(data=df_prediction %>%drop_na(Flux_ave), aes(dist, ele_fit, color=Flux_ave)) +
-  geom_point()
+  geom_point(size=3) +
+  xlab("Distance") + ylab("Fitted Elevation") + 
+  theme_bw() +
+  theme(axis.text=element_text(size=14),
+        axis.title=element_text(size=16))
+  
 CO2 <- ggplot(data=df_prediction %>%drop_na(Flux_ave), aes(dist, ele_fit, color=adjusted_ppm)) +
   geom_point()
 
